syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Grpc.Store.V1";

package store;

// The greeting service definition.
service StoreService {
  // store calls
  
  rpc BookSales(SaleRequest) returns (google.protobuf.Empty) {};
  rpc GetProductStockItem(ProductStockItemRequest) returns (ProductStockItemReply) {};
}

message SaleRequest {
  google.protobuf.Timestamp date = 1;
  repeated ProductStockItemReply products = 2;
}

message StockItemReply {
  int64 item_id = 1;
  double sales_price = 2;
  int32 amount = 3;
  int32 min_stock = 4;
  int32 max_stock = 5;
}

message ProductStockItemRequest {
  int64 barcode = 1;
  int64 store_id = 2;
}

message ProductStockItemReply {
  int64 product_id = 1;
  int64 barcode = 2;
  double purchase_price = 3;
  string product_name = 4;
  repeated StockItemReply stock_item = 5;
}
